{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 249,
  "lineage": "22fa77f8-8ded-7a9c-af03-c21cd5569525",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-10-18T10:04:22.375-07:00",
            "enable_cdn": false,
            "fingerprint": "UtRVZxwDaPY=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/httpHealthChecks/check-backend"
            ],
            "id": "projects/iac-triplex/global/backendServices/backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend",
            "port_name": "http",
            "project": "iac-triplex",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/backendServices/backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall-nointernet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-18T11:32:42.361-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-vpc-2b262f2d0e8b2646/global/firewalls/vpc-default-firewall-coalfire-fw",
            "log_config": [],
            "name": "vpc-default-firewall-coalfire-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
            "priority": 1000,
            "project": "tf-vpc-2b262f2d0e8b2646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/firewalls/vpc-default-firewall-coalfire-fw",
            "source_ranges": [
              "35.235.240.0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.shared_network",
            "google_compute_shared_vpc_host_project.host_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internet_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-10-18T11:05:34.889-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-vpc-2b262f2d0e8b2646/global/firewalls/allow-ssh-80-from-iap",
            "log_config": [],
            "name": "allow-ssh-80-from-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
            "priority": 1000,
            "project": "tf-vpc-2b262f2d0e8b2646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/firewalls/allow-ssh-80-from-iap",
            "source_ranges": [
              "35.235.240.0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.shared_network",
            "google_compute_shared_vpc_host_project.host_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shared_network-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-10-18T11:05:34.902-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tf-vpc-2b262f2d0e8b2646/global/firewalls/allow-ssh-icmp-from-iap-shared",
            "log_config": [],
            "name": "allow-ssh-icmp-from-iap-shared",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
            "priority": 1000,
            "project": "tf-vpc-2b262f2d0e8b2646",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/firewalls/allow-ssh-icmp-from-iap-shared",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.shared_network",
            "google_compute_shared_vpc_host_project.host_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/iac-triplex/global/forwardingRules/global-rule",
            "ip_address": "35.244.154.218",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-rule",
            "port_range": "80-80",
            "project": "iac-triplex",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/forwardingRules/global-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/targetHttpProxies/target-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "apache-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20201014",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/zones/us-east1-b/disks/apache-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-vpc-2b262f2d0e8b2646/zones/us-east1-b/instances/apache-vm",
            "instance_id": "816781384615014604",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "fYmSlQLo6aU=",
            "metadata_startup_script": "VM_NAME=VM1\n#!/bin/bash\n\nsudo yum install httpd -y\n\nsudo yum update -y\n\nsudo service httpd start\n\nsudo chkconfig httpd on\n",
            "name": "apache-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
                "network_ip": "10.0.2.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/subnetworks/coalfire-custom-network-sub3",
                "subnetwork_project": "tf-vpc-2b262f2d0e8b2646"
              }
            ],
            "project": "tf-vpc-2b262f2d0e8b2646",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/zones/us-east1-b/instances/apache-vm",
            "service_account": [
              {
                "email": "63769234646-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.shared_network",
            "google_compute_subnetwork.coalfire_shared_network_sub3",
            "google_project_service.host_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "compute-rhel-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rhel-cloud/global/images/rhel-8-v20201014",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/zones/us-east1-b/disks/compute-rhel-internet"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tf-vpc-2b262f2d0e8b2646/zones/us-east1-b/instances/compute-rhel-internet",
            "instance_id": "7426996646004732017",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "fYmSlQLo6aU=",
            "metadata_startup_script": "VM_NAME=VM1\n#!/bin/bash\n\nsudo yum install httpd -y\n\nsudo yum update -y\n\nsudo service httpd start\n\nsudo chkconfig httpd on\n",
            "name": "compute-rhel-internet",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.203.115",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
                "network_ip": "10.0.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/subnetworks/coalfire-custom-network-sub1",
                "subnetwork_project": "tf-vpc-2b262f2d0e8b2646"
              }
            ],
            "project": "tf-vpc-2b262f2d0e8b2646",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/zones/us-east1-b/instances/compute-rhel-internet",
            "service_account": [
              {
                "email": "63769234646-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "google_compute_network.shared_network",
            "google_compute_subnetwork.coalfire_shared_network_sub1",
            "google_project_service.host_project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "shared_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
            "name": "shared-network",
            "project": "tf-vpc-2b262f2d0e8b2646",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network"
          },
          "dependencies": [
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_shared_vpc_service_project.service_project_1",
            "google_folder.Application-Coalfire",
            "google_folder.Management-Coalfire",
            "google_project.host_project",
            "google_project.service_project_1",
            "google_project_service.host_project",
            "google_project_service.service_project_1",
            "random_id.host_project",
            "random_id.service_project_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "coalfire_shared_network_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T10:24:55.696-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/subnetworks/coalfire-custom-network-sub1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "coalfire-custom-network-sub1",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
            "private_ip_google_access": false,
            "project": "tf-vpc-2b262f2d0e8b2646",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/subnetworks/coalfire-custom-network-sub1"
          },
          "dependencies": [
            "google_compute_network.shared_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "coalfire_shared_network_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T10:06:48.646-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/subnetworks/coalfire-custom-network-sub3",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "coalfire-custom-network-sub3",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
            "private_ip_google_access": false,
            "project": "tf-vpc-2b262f2d0e8b2646",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/subnetworks/coalfire-custom-network-sub3"
          },
          "dependencies": [
            "google_compute_network.shared_network",
            "google_compute_shared_vpc_host_project.host_project",
            "google_compute_shared_vpc_service_project.service_project_1",
            "google_folder.Application-Coalfire",
            "google_folder.Management-Coalfire",
            "google_project.host_project",
            "google_project.service_project_1",
            "google_project_service.host_project",
            "google_project_service.service_project_1",
            "random_id.host_project",
            "random_id.service_project_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T10:04:44.989-07:00",
            "description": "a description",
            "id": "projects/iac-triplex/global/targetHttpProxies/target-proxy",
            "name": "target-proxy",
            "project": "iac-triplex",
            "proxy_id": 4863949275456981827,
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/targetHttpProxies/target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/urlMaps/url-map-target-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T10:04:33.771-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/backendServices/backend",
            "default_url_redirect": [],
            "description": "a description",
            "fingerprint": "q44Rm8-mjJI=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "apache-vm"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/iac-triplex/global/urlMaps/url-map-target-proxy",
            "map_id": 5300650507753343822,
            "name": "url-map-target-proxy",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/backendServices/backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/backendServices/backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "iac-triplex",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iac-triplex/global/urlMaps/url-map-target-proxy",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_http_health_check.default"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "tf-vpc-2b262f2d0e8b2646/us-east1/coalfire-router-1/cloud-nat-baa5g5",
            "min_ports_per_vm": 64,
            "name": "cloud-nat-baa5g5",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "tf-vpc-2b262f2d0e8b2646",
            "region": "us-east1",
            "router": "coalfire-router-1",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.shared_network",
            "module.cloud-nat.google_compute_router.router",
            "module.cloud-nat.random_string.name_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-18T10:15:36.906-07:00",
            "id": "projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/routers/coalfire-router-1",
            "name": "coalfire-router-1",
            "network": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/global/networks/shared-network",
            "project": "tf-vpc-2b262f2d0e8b2646",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tf-vpc-2b262f2d0e8b2646/regions/us-east1/routers/coalfire-router-1"
          },
          "dependencies": [
            "google_compute_network.shared_network"
          ]
        }
      ]
    }
  ]
}